--- a/styles.css
+++ b/styles.css
@@ -16,13 +16,43 @@ body {
   background-position-x: 40%;
   background-position-y: center;
   color: white;
+  display: flex;
   justify-content: center;
   align-items: center;
 }
 .nav {
-
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  background-color: #1b2522;
+  padding: .5rem 1rem;
 }
 
 .nav-top {
-  
+  position: fixed;
+  top: 0;
+  left: 0;
+  right: 0;
+  z-index: 1;
 }
+
+.logo {
+  width: 50px;
+}
+
+.nav-list {
+  margin: 0;
+  padding: 0;
+  display: flex;
+  list-style-type: none;
+}
+
+.nav-list a {
+  text-decoration: none;
+  margin-left: 1rem;
+  color: white;
+  }
+
+  .nav-list a:hover {
+    color: #ccc;
+  }
