curriculum section created and finished

--- a/styles.css
+++ b/styles.css
@@ -90,3 +90,34 @@ body {
     bottom: 1rem;
     width: 30px;
   }
+
+.section {
+  padding: 2rem;
+}
+
+.section-title {
+  margin: 0;
+  margin-bottom: 2rem;
+  font-size: 2rem;
+  text-align: center;
+  color: black;
+}
+
+.curriculum-grid {
+  display: grid;
+  grid-template-columns: repeat(2, minmax(auto, 450px));
+  justify-content: center;
+  align-items: center;
+  row-gap: 10px;
+  column-gap: 50px;
+}
+
+.curriculum-grid-item {
+  display: flex;
+
+}
+
+.curriculum-grid-item img {
+  width: 50px;
+  margin-right: 1rem;
+}
