--- a/styles.css
+++ b/styles.css
@@ -121,3 +121,24 @@ body {
   width: 50px;
   margin-right: 1rem;
 }
+
+.section-accent {
+  background-color: #0af;
+  color: white;
+  padding: 1.5rem;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.free-title {
+  color: white;
+  margin: 0;
+  font-size: 2.5rem;
+  text-transform: uppercase;
+}
+
+.free-sub-title {
+  color: white;
+  max-width: 300px;
+}
