--- a/styles.css
+++ b/styles.css
@@ -98,8 +98,8 @@ body {
 .section-title {
   margin: 0;
   margin-bottom: 2rem;
-  font-size: 2rem;
-  text-align: center;
+  /* font-size: 2rem;
+  text-align: center; */
   color: black;
 }
 
@@ -141,4 +141,34 @@ body {
 .free-sub-title {
   color: white;
   max-width: 300px;
+}
+
+.form {
+  max-width: 900px;
+  margin: 0 aut;
+}
+
+.form label {
+  color: black;
+  font-weight: bold;
+}
+
+.form input,
+.form textarea {
+  width: 100%;
+  margin-top: .25rem;
+  margin-bottom: .75rem;
+  outline: none;
+  border: 1px solid #1b2522;
+  border-radius: .3em;
+  padding: .5em;
+  color: inherit;
+  font-family: inherit;
+ 
+}
+
+.contact-title {
+  font-size: 3rem;
+  text-align: center;
+  font-weight: bold;
 }
